[package]
name = "salsa"
version = "0.1.0"
edition = "2021"
authors = ["Gabe Livengood"]
description = "SDL frontend for the `chip` CHIP-8 system core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
chip = { path = "../chip" }
